# stereo_lidar_recorder

./: .gitignore  CMakeLists.txt  README.md  StereoLiDARRecorder  test.cpp  toolchain_pi.cmake  transformations.json
include/: LiDAR.h  StereoCamera.h
src/: LiDAR.cpp  StereoCamera.cpp  StereoImages.cpp  main.cpp
